Fix masthead padding to align logo

--- a/source/scss/components/_masthead.scss
+++ b/source/scss/components/_masthead.scss
@@ -1,5 +1,5 @@
 header {
-    padding:  3.1em 0 1.67rem 0;
+    padding:  3em 0 1.6rem 0;
     text-align: center;
 }
 
